# rules_terraform

./: .bazel-npm-cache.json  .bazelrc  .gitignore  .yarnrc.yml  BUILD.bazel  LICENSE.txt  MODULE.bazel  README.md  REPO.bazel  WORKSPACE.bazel  go.mod  go.sum  package.json  workspace.bzl
cdktf/: BUILD.bazel  fake-node  fake-node.sh  project-runner.sh.tpl  provider.tf.json.tpl  providers-schema.sh  rules.bzl
cdktf-typescript/runfiles/: BUILD.bazel  package.json
cdktf-typescript/runfiles/src/: function-rlocation-from.ts  function-rlocation.ts
cdktf-typescript/test/: BUILD.bazel  cdktf.json
cdktf-typescript/test/src/: main.ts
cdktf/default/: BUILD.bazel
cdktf/synth/: BUILD.bazel  bin.sh
rules/: workspace.bzl
sh/: BUILD.bazel  rules.bzl  runner.sh.tpl
terraform/: BUILD.bazel  cdktf-synth.sh  cdktf-terraform-data.sh  config.tfrc  extensions.bzl  platform.bzl  project-runner.sh.tpl  provider-build.bazel.tpl  provider-platform-build.bazel  provider-rules.bzl  provider-toolchain.BUILD.bazel  provider-toolchains.BUILD.bazel  provider.BUILD.bazel  provider.bzl  providers-resolve.sh.tpl  providers.bzl  repositories.bzl  rules.bzl  terraform-lock-runner.sh.tpl  terraform-project-runner.sh.tpl  terraform.BUILD.bazel  terraform.MODULE.bazel  terraform.bazel  terraform.bzl  workspace.bzl
terraform/client/: BUILD.bazel
terraform/client/src/rulesterraform/terraformclient/: provider.py  service_discovery.py
terraform/default/: BUILD.bazel  terraform.bzl
terraform/format/: bin.sh
terraform/lock/: BUILD.bazel
terraform/lock/src/rulesterraform/terraformlock/: __main__.py  lock.py
terraform/resolve/: BUILD.bazel
terraform/resolve-tf/: BUILD.bazel
terraform/resolve-tf/src/rulesterraform/terraformresolvetf/: __main__.py  resolve_tf.py
terraform/resolve/src/rulesterraform/terraformresolve/: __main__.py  resolve.py
terraform/runfiles/: BUILD.bazel  main.go  provider.go  rlocation.go
terraform/test/: BUILD.bazel  main.tf  providers.bzl  test.MODULE.bazel  workspace.bzl
tools/bazel/: BUILD.bazel  deleted.bazelrc
tools/black/: BUILD.bazel
tools/buildifier/: BUILD.bazel
tools/file/: file.MODULE.bazel  files.bazel  files.bazelrc  workspace.bzl
tools/go/: go.MODULE.bazel
tools/javascript/: javascript.MODULE.bazel  npm.json
tools/lint/: BUILD.bazel
tools/nodejs/: BUILD.bazel  nodejs.MODULE.bazel
tools/npm/: npm.bzl  workspace.bzl
tools/prettier/: BUILD.bazel
tools/terraform/: BUILD.bazel  tf-resolve.sh
util/: BUILD.bazel  collection.bzl  exec-runner.sh.tpl  sha256sums.bzl  url.bzl
