load("@better_rules_javascript//commonjs:rules.bzl", "cjs_root")
load("@better_rules_javascript//javascript:rules.bzl", "js_library")

alias(
    name = "bazelrc",
    actual = "//tools/bazel:gen_bazelrc",
)

alias(
    name = "lint",
    actual = "//tools/lint",
)

cjs_root(
    name = "root",
    package_name = "@helloseer/rules-terraform",
)

js_library(
    name = "prettier_config",
    srcs = [".prettierrc.yml"],
    root = ":root",
    visibility = ["//:__subpackages__"],
    deps = ["@rules_terraform_npm//prettier-plugin-organize-imports:lib"],
)
