load("@rules_javascript//commonjs:rules.bzl", "cjs_root")
load("@rules_javascript//javascript:rules.bzl", "js_library")

alias(
    name = "lint",
    actual = "//tools/lint",
)

cjs_root(
    name = "root",
    package_name = "@helloseer/rules-terraform",
)

js_library(
    name = "prettier_config",
    srcs = [".prettierrc.yml"],
    root = ":root",
    visibility = ["//:__subpackages__"],
    deps = ["@npm//prettier-plugin-organize-imports:lib"],
)

alias(
    name = "refresh",
    actual = "//tools/bazel:refresh",
)
