module(name = "rules_terraform")

# Bazel Lib

bazel_dep(name = "bazel_lib", version = "3.2.0")

# Bazel Util

bazel_dep(name = "bazel_util")

BAZEL_UTIL_VERSION = "080694bcfa6d75771e6b72e4bcb66edd9e40fbfe"

archive_override(
    module_name = "bazel_util",
    sha256 = "5e6ad7a1a0c4a9160139cdd639162924e285ba6b125291bbd4805c07f31d32b7",
    strip_prefix = "bazel-util-%s" % BAZEL_UTIL_VERSION,
    url = "https://github.com/redoapp/bazel-util/archive/%s.tar.gz" % BAZEL_UTIL_VERSION,
)

# File

include("//tools/file:file.MODULE.bazel")

# JavaScript

bazel_dep(name = "rules_javascript")

RULES_JAVASCRIPT_VERSION = "34b371416d1468c3a77e66b2c4e9176dcb642b1f"

archive_override(
    module_name = "rules_javascript",
    sha256 = "ad1942a1b47ba27ff04438aaa8f9feaeb539907efbfdb7484f473cc86f361f0c",
    strip_prefix = "rules_javascript-%s" % RULES_JAVASCRIPT_VERSION,
    url = "https://github.com/redoapp/rules_javascript/archive/%s.tar.gz" % RULES_JAVASCRIPT_VERSION,
)

include("//tools/javascript:javascript.MODULE.bazel")
include("//tools/nodejs:nodejs.MODULE.bazel")

# Go

bazel_dep(name = "rules_go", version = "0.53.0")
bazel_dep(name = "gazelle", version = "0.47.0")

include("//tools/go:go.MODULE.bazel")

# Platforms

bazel_dep(name = "platforms", version = "1.0.0")

# Python

bazel_dep(name = "rules_python", version = "1.4.1")

# Shell

bazel_dep(name = "rules_shell_extra")

RULES_SHELL_EXTRA_VERSION = "93090b47f81577ba4890c770effd889f61ce5d19"

archive_override(
    module_name = "rules_shell_extra",
    sha256 = "c69a83b7afefa03b21c370c2044c63c41800820f51680022604133a098e2c932",
    strip_prefix = "rules_shell_extra-%s" % RULES_SHELL_EXTRA_VERSION,
    url = "https://github.com/redoapp/rules_shell_extra/archive/%s.tar.gz" % RULES_SHELL_EXTRA_VERSION,
)

# Skylib

bazel_dep(name = "bazel_skylib", version = "1.9.0")

# Terraform

include("//terraform:terraform.MODULE.bazel")

# Test

include("//terraform/test:test.MODULE.bazel")
