module(name = "rules_terraform")

# Bazel Lib

bazel_dep(name = "bazel_lib", version = "3.2.0")

# Bazel Util

bazel_dep(name = "bazel_util")

BAZEL_UTIL_VERSION = "a2f0d02bc6f130eb887ad4cf18499bdbfd39f34d"

archive_override(
    module_name = "bazel_util",
    sha256 = "8e7cbc3f3119109603c17ee686973a0bbe99770aa57f1d2b33324583d784c38f",
    strip_prefix = "bazel-util-%s" % BAZEL_UTIL_VERSION,
    url = "https://github.com/redoapp/bazel-util/archive/%s.tar.gz" % BAZEL_UTIL_VERSION,
)

# File

include("//tools/file:file.MODULE.bazel")

# JavaScript

bazel_dep(name = "rules_javascript")

RULES_JAVASCRIPT_VERSION = "40bf21d51264c67b8c8c02c4ec8a31bf2f4d4138"

archive_override(
    module_name = "rules_javascript",
    sha256 = "3552698824e7056281287822df3e11047069dfc902b7e1a5d505ec8b00cc27a9",
    strip_prefix = "rules_javascript-%s" % RULES_JAVASCRIPT_VERSION,
    url = "https://github.com/redoapp/rules_javascript/archive/%s.tar.gz" % RULES_JAVASCRIPT_VERSION,
)

include("//tools/javascript:javascript.MODULE.bazel")
include("//tools/nodejs:nodejs.MODULE.bazel")

# Go

bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.47.0")

include("//tools/go:go.MODULE.bazel")

# Platforms

bazel_dep(name = "platforms", version = "1.0.0")

# Python

bazel_dep(name = "rules_python", version = "1.8.5")

# Shell

bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "rules_shell_extra")

RULES_SHELL_EXTRA_VERSION = "93090b47f81577ba4890c770effd889f61ce5d19"

archive_override(
    module_name = "rules_shell_extra",
    sha256 = "c69a83b7afefa03b21c370c2044c63c41800820f51680022604133a098e2c932",
    strip_prefix = "rules_shell_extra-%s" % RULES_SHELL_EXTRA_VERSION,
    url = "https://github.com/redoapp/rules_shell_extra/archive/%s.tar.gz" % RULES_SHELL_EXTRA_VERSION,
)

# Skylib

bazel_dep(name = "bazel_skylib", version = "1.9.0")

# Terraform

include("//terraform:terraform.MODULE.bazel")

# Test

include("//terraform/test:test.MODULE.bazel")
