workspace(name = "rules_terraform")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive", "http_file")

# Skylib

SKYLIB_VERSION = "16de038c484145363340eeaf0e97a0c9889a931b"

http_archive(
    name = "bazel_skylib",
    sha256 = "96e0cd3f731f0caef9e9919aa119ecc6dace36b149c2f47e40aa50587790402b",
    strip_prefix = "bazel-skylib-%s" % SKYLIB_VERSION,
    url = "https://github.com/bazelbuild/bazel-skylib/archive/%s.tar.gz" % SKYLIB_VERSION,
)

# Python

PYTHON_VERSION = "0efcd94d0ee6e1e56b27d25469c28502282fab5b"

http_archive(
    name = "rules_python",
    sha256 = "e611111d092e54f04e0818d1bc89aad6a841c6f50cbe96e8ec13a6eddcfbf354",
    strip_prefix = "rules_python-%s" % PYTHON_VERSION,
    url = "https://github.com/bazelbuild/rules_python/archive/%s.zip" % PYTHON_VERSION,
)

load("@rules_python//python:repositories.bzl", "python_register_toolchains")

python_register_toolchains(
    name = "python3_11",
    python_version = "3.11",
)

# Go

GO_VERSION = "0.34.0"

http_archive(
    name = "io_bazel_rules_go",
    sha256 = "9c44b54c51ca9aafb73e9dd9e71514cde7679b6cd165bf33abde847504a778ba",
    strip_prefix = "rules_go-%s" % GO_VERSION,
    url = "https://github.com/bazelbuild/rules_go/archive/v%s.zip" % GO_VERSION,
)

load("@io_bazel_rules_go//go:deps.bzl", "go_register_toolchains", "go_rules_dependencies")

go_rules_dependencies()

go_register_toolchains(version = "1.17.2")

# Gazelle

http_archive(
    name = "bazel_gazelle",
    sha256 = "501deb3d5695ab658e82f6f6f549ba681ea3ca2a5fb7911154b5aa45596183fa",
    urls = [
        "https://storage.googleapis.com/bazel-mirror/github.com/bazelbuild/bazel-gazelle/releases/download/v0.26.0/bazel-gazelle-v0.26.0.tar.gz",
        "https://github.com/bazelbuild/bazel-gazelle/releases/download/v0.26.0/bazel-gazelle-v0.26.0.tar.gz",
    ],
)

load("@bazel_gazelle//:deps.bzl", "gazelle_dependencies")

gazelle_dependencies(go_repository_default_config = "@//:WORKSPACE.bazel")

# Rules pkg

RULES_PKG_VERSION = "0.10.1"

http_archive(
    name = "rules_pkg",
    sha256 = "d250924a2ecc5176808fc4c25d5cf5e9e79e6346d79d5ab1c493e289e722d1d0",
    url = "https://github.com/bazelbuild/rules_pkg/releases/download/%s/rules_pkg-%s.tar.gz" % (RULES_PKG_VERSION, RULES_PKG_VERSION),
)

# Rules Javascript

RULES_JAVASCRIPT_VERSION = "d1989ea35a6e63962b1b72b98d1170e73660d6bb"

http_archive(
    name = "better_rules_javascript",
    sha256 = "a9fc20f2e7c2b339162f39691aacee483b8710ca1c0ae99ee5fcca6db35d3c8a",
    strip_prefix = "rules_javascript-%s" % RULES_JAVASCRIPT_VERSION,
    url = "https://github.com/redoapp/rules_javascript/archive/%s.tar.gz" % RULES_JAVASCRIPT_VERSION,
)

load("@better_rules_javascript//rules:workspace.bzl", javascript_repositories = "repositories")

javascript_repositories(
    version = "20.15.1",
)

# Protobuf

http_archive(
    name = "com_google_protobuf",
    sha256 = "3bd7828aa5af4b13b99c191e8b1e884ebfa9ad371b0ce264605d347f135d2568",
    strip_prefix = "protobuf-3.19.4",
    url = "https://github.com/protocolbuffers/protobuf/archive/v3.19.4.tar.gz",
)

load("@com_google_protobuf//:protobuf_deps.bzl", "protobuf_deps")

protobuf_deps()

# Rivet Bazel Util

RIVET_BAZEL_UTIL_VERSION = "f0c1bbe0935c3994e4c1ea4b3370a47d8df9819e"

http_archive(
    name = "rivet_bazel_util",
    sha256 = "fca24b50c6544c0c2146bca6de7b00558c276020e64692b770361d650ed97b6e",
    strip_prefix = "rivet-bazel-util-%s" % RIVET_BAZEL_UTIL_VERSION,
    url = "https://github.com/rivethealth/rivet-bazel-util/archive/%s.tar.gz" % RIVET_BAZEL_UTIL_VERSION,
)

# Files

RULES_FILE_VERSION = "1a1d8027c1a8603632f11b7a87a4e555c372570d"

http_archive(
    name = "rules_file",
    sha256 = "b8d3e02337e10af445d130221a9abe74945bf63006f678b75741676fbefc3a66",
    strip_prefix = "rules_file-%s" % RULES_FILE_VERSION,
    url = "https://github.com/redoapp/rules_file/archive/%s.zip" % RULES_FILE_VERSION,
)

load("@rules_file//buildifier:workspace.bzl", "buildifier_repositories", "buildifier_toolchains")

buildifier_repositories()

buildifier_toolchains()

# Rules Terraform

load("//:workspace.bzl", rules_terraform_deps = "deps")

rules_terraform_deps()

# Internal

load("//tools/file:workspace.bzl", "file_repositories")

file_repositories()

load("//tools/npm:workspace.bzl", "npm_repositories")

npm_repositories()

load("//terraform/test:workspace.bzl", "tf_test_repositories")

tf_test_repositories()
