workspace(name = "rules_terraform")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Rules Javascript

JAVASCRIPT_VERSION = "6a121489e87c8b1935b1cce2ec094a1a336f7196"

http_archive(
    name = "better_rules_javascript",
    sha256 = "4730ba4273195bc4d5f626b3d3906e8e38ed2ecf5bcb7a318e014504fef20f93",
    strip_prefix = "rules_javascript-%s" % JAVASCRIPT_VERSION,
    url = "https://github.com/redoapp/rules_javascript/archive/%s.tar.gz" % JAVASCRIPT_VERSION,
)

load("@better_rules_javascript//rules:workspace.bzl", javascript_repositories = "repositories")

javascript_repositories()

# Internal

load("//tools/npm:workspace.bzl", "npm_repositories")

npm_repositories()
