exports_files(
    ["project-runner.sh.tpl"],
    visibility = ["//visibility:public"],
)

alias(
    name = "cdktf",
    actual = "//cdktf/default:cdktf",
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "fake_node",
    srcs = ["fake-node.sh"],
    visibility = ["//visibility:public"],
)
