load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("@rules_shell_extra//shell:rules.bzl", sh_binary_ = "sh_binary")

exports_files(
    [
        "project-runner.sh.tpl",
        "provider.tf.json.tpl",
    ],
    visibility = ["//visibility:public"],
)

alias(
    name = "cdktf",
    actual = "//cdktf/default:cdktf",
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "fake_node",
    srcs = ["fake-node"],
    visibility = ["//visibility:public"],
)

sh_binary_(
    name = "providers_schema",
    main = "providers-schema.sh",
    visibility = ["//visibility:public"],
)
