load(":platform.bzl", "cpu_constraints", "os_constraints")

exports_files(
    [
        "providers-resolve.sh.tpl",
        "project-runner.sh.tpl",
    ],
    visibility = ["//visibility:public"],
)

alias(
    name = "terraform",
    actual = "//terraform/default:terraform",
    visibility = ["//visibility:public"],
)

toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

toolchain_type(
    name = "platform_toolchain",
    visibility = ["//visibility:public"],
)
