load(":rules.bzl", "tf_toolchain_terraform", "tf_toolchains")

exports_files(
    [
        "config.tfrc",
        "providers-resolve.sh.tpl",
        "project-runner.sh.tpl",
    ],
    visibility = ["//visibility:public"],
)

tf_toolchain_terraform(
    name = "terraform",
    visibility = ["//visibility:public"],
)

toolchain_type(
    name = "terraform_type",
    visibility = ["//visibility:public"],
)

tf_toolchains(
    name_fmt = "terraform_{name}",
    toolchain_fmt = "@terraform_{name}//:toolchain",
    toolchain_type = ":terraform_type",
)
