load("@rules_python//python:defs.bzl", "py_binary")

py_binary(
    name = "bin",
    srcs = glob(["src/**/*.py"]),
    imports = ["src"],
    legacy_create_init = False,
    main = "src/rulesterraform/terraformresolve/__main__.py",
    visibility = ["//visibility:public"],
    deps = ["//terraform/client:lib"],
)
