file = use_extension("@bazel_util//file:extensions.bzl", "file", dev_dependency = True)
file.files(
    name = "files",
    bazelignore = "//:.bazelignore",
    bazelrc = "tools/file/files.bazelrc",
    build = "//tools/file:files.bazel",
    root_file = "//:MODULE.bazel",
)
use_repo(file, "files")
