file = use_extension("@bazel_util//file:extensions.bzl", "file", dev_dependency = True)
file.files(
    name = "files",
    bazelrc = "tools/file/files.bazelrc",
    build = "//tools/file:files.bazel",
    # Keep in sync with REPO.bazel ignore_directories
    ignore_directories = [
        "**/.git",
        "**/node_modules",
    ],
)
use_repo(file, "files")
