filegroup(
    name = "buildifier_files",
    srcs = glob(["files/**/*.bazel", "files/**/*.bzl"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "prettier_files",
    srcs = glob(["files/**/*.md", "files/**/.*.js", "files/**/*.js", "files/**/*.json", "files/**/*.ts", "files/**/*.yml"]),
    visibility = ["//visibility:public"],
)
