filegroup(
    name = "black_files",
    srcs = glob(["files/**/*.py"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "buildifier_files",
    srcs = glob(["files/**/*.bazel", "files/**/*.bzl"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "prettier_files",
    srcs = glob(["files/**/*.md", "files/**/*.json", "files/**/*.ts"]),
    visibility = ["//visibility:public"],
)
