go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_hashicorp_terraform_plugin_framework",
)

go_deps_dev = use_extension("@gazelle//:extensions.bzl", "go_deps", dev_dependency = True)
go_deps_dev.gazelle_override(
    directives = ["gazelle:proto disable_global"],
    path = "github.com/hashicorp/terraform-plugin-go",
)
