load("@rules_file//generate:rules.bzl", "format", "formatter_composite", "generate_test", "multi_generate")

format(
    name = "black_format",
    srcs = ["@files//:black_files"],
    formatter = "//tools/black",
    strip_prefix = "/files",
)

format(
    name = "buildifier_format",
    srcs = ["@files//:buildifier_files"],
    formatter = "//tools/buildifier",
    strip_prefix = "/files",
)

multi_generate(
    name = "lint",
    visibility = ["//:__subpackages__"],
    deps = [
        ":black_format",
        ":buildifier_format",
        ":prettier_format",
    ],
)

generate_test(
    name = "format_test",
    generate = ":format",
    visibility = ["//:__subpackages__"],
)

format(
    name = "prettier_format",
    srcs = ["@files//:prettier_files"],
    formatter = "//tools/prettier",
    strip_prefix = "/files",
)
