load("@better_rules_javascript//nodejs:rules.bzl", "nodejs_install", "nodejs_modules_package")
load("@better_rules_javascript//typescript:rules.bzl", "js_import_ts")
load("//tools/npm:npm.bzl", NPM_ROOTS = "ROOTS")

package(default_visibility = ["//visibility:public"])

nodejs_install(
    name = "install",
    src = ":node_modules",
)

nodejs_modules_package(
    name = "node_modules",
    links = [target for target in []],
    deps = [":npm_%s" % dep["name"] for dep in NPM_ROOTS],
)

[
    js_import_ts(
        name = "npm_%s" % dep["name"],
        dep = "@rules_terraform_npm//%s:lib" % dep["name"],
    )
    for dep in NPM_ROOTS
]
