load("@npm//:roots.bzl", "ROOTS")
load("@rules_javascript//nodejs:rules.bzl", "nodejs_install", "nodejs_modules_package")
load("@rules_javascript//typescript:npm.bzl", "ts_node_modules")
load("@rules_javascript//typescript:rules.bzl", "js_import_ts")

package(default_visibility = ["//visibility:public"])

nodejs_install(
    name = "install",
    src = ":node_modules",
)

nodejs_modules_package(
    name = "node_modules",
    deps = [":terraform_runfiles"] + ts_node_modules("npm", ROOTS),
)

js_import_ts(
    name = "terraform_runfiles",
    dep = "//cdktf-typescript/runfiles:lib",
)
